syntax = "proto3";
package duality.dex;

option go_package = "github.com/duality-labs/duality/x/dex/types";
import "gogoproto/gogo.proto";
import "duality/dex/pool_reserves.proto";

message Pool {
    string ID = 1;
    PoolReserves lower_tick0 = 2;
    PoolReserves upper_tick1 = 3;
}
